test/fail/error_optional_parameter_unify.sest
module ErrorOptionalParameterUnify = struct

  val f1(g) = g(?foo 42)

  val f2(g) = g(?foo 42, ?bar true)

  val f(flag, g) = if flag then f1(g) else f2(g)

  val main(_) =
    let h(?foo nopt) =
      case nopt of
      | None    -> 0
      | Some(n) -> n
      end
    in
    let res = f(true, h) in
    print_debug(res)

end
